--- a/Calificaciones/Calificaciones.csproj
+++ b/Calificaciones/Calificaciones.csproj
@@ -55,12 +55,20 @@
     <Compile Include="Central.cs" />
     <Compile Include="Entidades\Alumno.cs" />
     <Compile Include="Entidades\Materia.cs" />
+    <Compile Include="Entidades\Response.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmCalificaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmCalificaciones.Designer.cs">
+      <DependentUpon>FrmCalificaciones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Logger.cs" />
     <Compile Include="Materias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmCalificaciones.resx">
+      <DependentUpon>FrmCalificaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Materias.resx">
       <DependentUpon>Materias.cs</DependentUpon>
